Implementação do EmailJS: envio de moedas, confirmação do professor e resgate com foto

--- a/03. Codigos/front/pages/distribuirMoedas.html
+++ b/03. Codigos/front/pages/distribuirMoedas.html
@@ -112,6 +112,11 @@
     dataCampo.value = hoje;
   </script>
 
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+<script src="../js/email_moedas_aluno.js"></script>
+
+
 </body>
 
 </html>
