--- a/03. Codigos/front/pages/vantagensAluno.html
+++ b/03. Codigos/front/pages/vantagensAluno.html
@@ -40,6 +40,12 @@
   <footer>
     @Sistema de Moeda Estudantil
   </footer>
+  
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="../js/email_resgate_vantagem.js"></script>
+</body>
+</html>
+
 
 </body>
 
